Web page update to include features

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -43,6 +43,8 @@ website:
             href: manuscript/manuscript.qmd
           - text: "Common datasets"
             href: manuscript/datasets.qmd
+          - text: "Features"
+            href: studies/feature_representation.qmd
   page-footer: 
     right: 
       - icon: github
